# photon_loom

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
models/cannon/: rigged_cannon.mtl
output_images/: output_alpha.ppm  output_ao.ppm  output_blinn.ppm  output_bloom.ppm  output_bump.ppm  output_depth.ppm  output_disp.ppm  output_light_depth.ppm  output_multi_light.ppm  output_nomsa.ppm  output_normal.ppm  output_parallax.ppm  output_shadow.ppm  output_spotlight.ppm  output_ssao.ppm  output_texture.ppm
